--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sequelize-cli": "^6.6.2",
     "speakeasy": "^2.0.0",
     "swagger-ui-express": "^4.1.6",
+    "sweetalert2": "^11.15.10",
     "uuid": "^9.0.1",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
